--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,7 @@ jobs:
           no_output_timeout: 360m
           command: |
             source ~/.bashrc
+            echo $PATH
             pytest --cov -k 'test_singularity' neurodocker
             codecov
       # - save_cache:
