--- a/neurodocker/templates/spm12.yaml
+++ b/neurodocker/templates/spm12.yaml
@@ -1,12 +1,14 @@
 # Instructions to install SPM.
 #
-# Website: http://www.fil.ion.ucl.ac.uk/spm/
-# Documentation: http://www.fil.ion.ucl.ac.uk/spm/doc/
+# Website: https://www.fil.ion.ucl.ac.uk/spm/
+# Documentation: https://www.fil.ion.ucl.ac.uk/spm/doc/
 
 generic:
   binaries:
     urls:
       dev: https://www.fil.ion.ucl.ac.uk/spm/download/restricted/utopia/dev/spm12_latest_Linux_R2010a.zip
+      r7771: https://www.fil.ion.ucl.ac.uk/spm/download/restricted/utopia/previous/spm12_r7771_R2010a.zip
+      r7487: https://www.fil.ion.ucl.ac.uk/spm/download/restricted/utopia/previous/spm12_r7487_R2010a.zip
       r7219: https://www.fil.ion.ucl.ac.uk/spm/download/restricted/utopia/previous/spm12_r7219_R2010a.zip
       r6914: https://www.fil.ion.ucl.ac.uk/spm/download/restricted/utopia/previous/spm12_r6914_R2010a.zip
       r6685: https://www.fil.ion.ucl.ac.uk/spm/download/restricted/utopia/previous/spm12_r6685_R2010a.zip
@@ -14,6 +16,7 @@ generic:
       r6225: https://www.fil.ion.ucl.ac.uk/spm/download/restricted/utopia/previous/spm12_r6225_R2010a.zip
     env:
       FORCE_SPMMCR: "1"
+      SPM_HTML_BROWSER: "0"
     instructions: |
       echo "Downloading standalone SPM ..."
       curl {{ spm12.curl_opts }} -o /tmp/spm12.zip {{ spm12.binaries_url }}
