add cli `neurodocker-minify`

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ dev =
 [options.entry_points]
 console_scripts =
     neurodocker = neurodocker.neurodocker:main
+    neurodocker-minify = neurodocker.reprozip.gentle.trace:main
 
 [options.package_data]
 neurodocker =
