add gentle tracer to package data

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ console_scripts =
 [options.package_data]
 neurodocker =
     templates/*.yaml
+    reprozip/gentle/_trace.sh
     reprozip/utils/reprozip_trace_runner.sh
 
 [versioneer]
