ADD: method to minify containers gently and in-place (#258)
* add files to minify container in place

* tmp: install ndminify command-line program

* add _trace.sh script to installation

* update documentation

* remove files created in /tmp

* decode as utf-8

* Revert "decode as utf-8"

This reverts commit 6c6d06a3188d69fe3300ee93068d60b73a568175.

* write to file as utf-8

* raise error if attempting to prune mounted directory

* handle unicode encode errors in filepaths

* fix math in message

* add whitespace before printing finished

* add cli `neurodocker-minify`

* pip install reprozip

* use `neurodocker-minify` as minification cli

* fix error in freesurfer with license example

* add note on pruning individual dirs

* add tests for gentle minification

* add gentle tracer to package data

* add note to install docker python package for minification

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,10 +37,12 @@ dev =
 [options.entry_points]
 console_scripts =
     neurodocker = neurodocker.neurodocker:main
+    neurodocker-minify = neurodocker.reprozip.gentle.trace:main
 
 [options.package_data]
 neurodocker =
     templates/*.yaml
+    reprozip/gentle/_trace.sh
     reprozip/utils/reprozip_trace_runner.sh
 
 [versioneer]
