--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ classifiers =
 packages = find:
 python_requires = >= 3.5
 install_requires =
-    etelemetry
+    etelemetry>=0.2.0
     jinja2>=2.0
     PyYAML>=3.0
 
