support python 3.8 + change project url

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = neurodocker
-url = https://github.com/kaczmarj/neurodocker
+url = https://github.com/repronim/neurodocker
 author = Neurodocker Developers
 author_email = jakub.kaczmarzyk@gmail.com
 description = Create custom containers for neuroimaging
@@ -17,6 +17,7 @@ classifiers =
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
     Topic :: Software Development
     Topic :: Software Development :: Libraries :: Python Modules
 
