--- a/neurodocker/templates/minc.yaml
+++ b/neurodocker/templates/minc.yaml
@@ -1,34 +1,44 @@
 # Instructions to install MINC toolkit v2.
 #
 # Repository: https://github.com/BIC-MNI/minc-toolkit-v2
-#
-# Binaries are compiled in a CentOS 6.9 Docker container, based on this
-# Dockerfile:
-# https://github.com/BIC-MNI/build_packages/blob/master/build_centos_6.9_x64/Dockerfile
+# Instructions: http://bic-mni.github.io/#on-debianubuntu
 
 generic:
   binaries:
     urls:
-      1.9.15: https://dl.dropbox.com/s/40hjzizaqi91373/minc-toolkit-1.9.15-20170529-CentOS_6.9-x86_64.tar.gz
+      1.9.15: https://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-1.9.15-20170529-Ubuntu_16.04-x86_64.deb
+      1.9.16: https://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-1.9.16-20180117-Ubuntu_18.04-x86_64.deb
+      1.9.17: https://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-1.9.17-20190313-Ubuntu_18.04-x86_64.deb
+      # tested and working in: ubuntu:18.04, centos:7
     dependencies:
       apt: >
-        libgl1-mesa-dev libice6 libsm6 libx11-6 libxext6 libxi6 libxmu6
-        libgomp1 libjpeg62
+        libgl1-mesa-dev libice6 libsm6 libx11-6 libxext6 libxi6 libxmu6 libgomp1 libjpeg62
+        octave libglu1-mesa libgl1-mesa-glx perl imagemagick bc ed libc6 libstdc++6 gdebi-core binutils git
       yum: >
-        libICE libSM libX11 libXext libXi libXmu libgomp libjpeg-turbo
-        mesa-libGL-devel
+        libICE libSM libX11 libXext libXi libXmu libgomp libjpeg-turbo octave mesa-dri-drivers
+        mesa-libGL-devel epel-release glibc libstdc++ ImageMagick perl binutils git
+    env:
+        MINC_TOOLKIT: "{{ minc.install_path }}"
+        MINC_TOOLKIT_VERSION: "{{ minc.install_path }}"
+        PATH: "{{ minc.install_path }}/bin:{{ minc.install_path }}/volgenmodel-nipype/extra-scripts:{{ minc.install_path }}/pipeline:$PATH"
+        PERL5LIB: "{{ minc.install_path }}/perl:{{ minc.install_path }}/pipeline:$PERL5LIB"
+        LD_LIBRARY_PATH: "{{ minc.install_path }}/lib:{{ minc.install_path }}/lib/InsightToolkit:$LD_LIBRARY_PATH"
+        MNI_DATAPATH: "{{ minc.install_path }}/share"
+        MINC_FORCE_V2: "1"
+        MINC_COMPRESS: "4"
+        VOLUME_CACHE_THRESHOLD: "-1"
+        MANPATH: "{{ minc.install_path }}/man:$MANPATH"
     instructions: |
       {{ minc.install_dependencies() }}
       echo "Downloading MINC, BEASTLIB, and MODELS..."
-      mkdir -p {{ minc.install_path }}
-      curl {{ minc.curl_opts }} {{ minc.binaries_url }} \
-      | tar -xz -C {{ minc.install_path }} --strip-components 1
+      cd /
+      curl {{ minc.binaries_url }} -o minc.deb && ar p minc.deb data.tar.gz | tar zx && rm minc.deb
+      ln -s /opt/minc/{{ minc.version }} {{ minc.install_path }} 
+      git clone https://github.com/CAIsr/volgenmodel-nipype.git {{ minc.install_path }}/volgenmodel-nipype/
       curl {{ minc.curl_opts }} http://packages.bic.mni.mcgill.ca/tgz/beast-library-1.1.tar.gz \
       | tar -xz -C {{ minc.install_path }}/share
       curl {{ minc.curl_opts }} -o /tmp/mni_90a.zip http://www.bic.mni.mcgill.ca/~vfonov/icbm/2009/mni_icbm152_nlin_sym_09a_minc2.zip
       unzip /tmp/mni_90a.zip -d {{ minc.install_path }}/share/icbm152_model_09a
       curl {{ minc.curl_opts }} -o /tmp/mni_90c.zip http://www.bic.mni.mcgill.ca/~vfonov/icbm/2009/mni_icbm152_nlin_sym_09c_minc2.zip
       unzip /tmp/mni_90c.zip -d {{ minc.install_path }}/share/icbm152_model_09c
-      sed -i 's+MINC_TOOLKIT=/opt/minc+MINC_TOOLKIT={{ minc.install_path }}+g' {{ minc.install_path }}/minc-toolkit-config.sh
-      sed -i '$isource {{ minc.install_path }}/minc-toolkit-config.sh' $ND_ENTRYPOINT
       rm -rf /tmp/mni*
