--- a/neurodocker/templates/_header.yaml
+++ b/neurodocker/templates/_header.yaml
@@ -5,7 +5,7 @@ generic:
   custom:
     dependencies:
       apt: apt-utils bzip2 ca-certificates curl locales unzip
-      yum: bzip2 ca-certificates curl localedef unzip
+      yum: bzip2 ca-certificates curl localedef unzip epel-release
     env:
       LANG: "en_US.UTF-8"
       LC_ALL: "en_US.UTF-8"
