add pre-commit and remove makefile

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,8 +32,11 @@ install_requires =
 [options.extras_require]
 dev =
     docker>=3.0
+    pre-commit
     pytest-cov>=2.0
     spython>=0.0.36
+all =
+    %(dev)s
 
 [options.entry_points]
 console_scripts =
