--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,6 @@ classifiers =
     Operating System :: OS Independent
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
@@ -32,6 +31,7 @@ install_requires =
 [options.extras_require]
 dev =
     docker>=3.0
+    flake8
     pre-commit
     pytest-cov>=2.0
     spython>=0.0.36
@@ -59,3 +59,7 @@ parentdir_prefix =
 
 [coverage:run]
 branch = True
+
+[flake8]
+max-line-length = 88
+per-file-ignores = __init__.py:F401
