--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,3 +1,19 @@
+---
+# Aliases common among jobs.
+_checkout: &checkout
+  uses: actions/checkout@v2
+_setup_python: &setup_python
+  - name: Set up Python
+    uses: actions/setup-python@v2
+    with:
+      python-version: 3.8
+_install_neurodocker: &install_neurodocker
+  - name: Install Neurodocker
+    run: python -m pip install --editable .[dev]
+_codecov: &codecov
+  - name: Upload code coverage
+    run: codecov
+
 name: Continuous Integration
 
 on:
@@ -10,33 +26,26 @@ jobs:
   test_no_image_build:
     runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-    - name: Install Neurodocker
-      run: python -m pip install --editable .[dev]
+    - *checkout
+    - *setup_python
+    - *install_neurodocker
     - name: Run tests that do not build images
       run: python -m pytest --cov -k 'not test_docker and not test_singularity' neurodocker
     - name: Test examples
       run: python -m pytest --cov -k examples
+    - *codecov
   test_docker_image_builds:
     runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-    - name: Install Neurodocker
-      run: python -m pip install --editable .[dev]
+    - *checkout
+    - *setup_python
+    - *install_neurodocker
     - name: Run tests that build Docker images
       run: pytest --cov -k 'test_docker' neurodocker
+    - *codecov
   test_singularity_image_builds:
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v2
       - name: Install Singularity
         run: |
           sudo apt-get update
@@ -52,11 +61,9 @@ jobs:
           cd builddir
           make -j
           sudo make install
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-      - name: Install Neurodocker
-        run: python -m pip install --editable .[dev]
+      - *checkout
+      - *setup_python
+      - *install_neurodocker
       - name: Run tests that build Singularity images
         run: pytest --cov -k 'test_singularity' neurodocker
+      - *codecov
