--- a/neurodocker/templates/minc.yaml
+++ b/neurodocker/templates/minc.yaml
@@ -6,29 +6,62 @@
 # Dockerfile:
 # https://github.com/BIC-MNI/build_packages/blob/master/build_centos_6.9_x64/Dockerfile
 
-generic:
-  binaries:
-    urls:
-      1.9.15: https://dl.dropbox.com/s/40hjzizaqi91373/minc-toolkit-1.9.15-20170529-CentOS_6.9-x86_64.tar.gz
-    dependencies:
-      apt: >
-        libgl1-mesa-dev libice6 libsm6 libx11-6 libxext6 libxi6 libxmu6
-        libgomp1 libjpeg62
-      yum: >
-        libICE libSM libX11 libXext libXi libXmu libgomp libjpeg-turbo
-        mesa-libGL-devel
-    instructions: |
-      {{ minc.install_dependencies() }}
-      echo "Downloading MINC, BEASTLIB, and MODELS..."
-      mkdir -p {{ minc.install_path }}
-      curl {{ minc.curl_opts }} {{ minc.binaries_url }} \
-      | tar -xz -C {{ minc.install_path }} --strip-components 1
-      curl {{ minc.curl_opts }} http://packages.bic.mni.mcgill.ca/tgz/beast-library-1.1.tar.gz \
-      | tar -xz -C {{ minc.install_path }}/share
-      curl {{ minc.curl_opts }} -o /tmp/mni_90a.zip http://www.bic.mni.mcgill.ca/~vfonov/icbm/2009/mni_icbm152_nlin_sym_09a_minc2.zip
-      unzip /tmp/mni_90a.zip -d {{ minc.install_path }}/share/icbm152_model_09a
-      curl {{ minc.curl_opts }} -o /tmp/mni_90c.zip http://www.bic.mni.mcgill.ca/~vfonov/icbm/2009/mni_icbm152_nlin_sym_09c_minc2.zip
-      unzip /tmp/mni_90c.zip -d {{ minc.install_path }}/share/icbm152_model_09c
-      sed -i 's+MINC_TOOLKIT=/opt/minc+MINC_TOOLKIT={{ minc.install_path }}+g' {{ minc.install_path }}/minc-toolkit-config.sh
-      sed -i '$isource {{ minc.install_path }}/minc-toolkit-config.sh' $ND_ENTRYPOINT
-      rm -rf /tmp/mni*
+name: minc
+binaries:
+  arguments:
+    required:
+    - version
+    optional:
+      install_path: /opt/minc-{{ self.version }}
+  urls:
+    "1.9.15": https://dl.dropbox.com/s/40hjzizaqi91373/minc-toolkit-1.9.15-20170529-CentOS_6.9-x86_64.tar.gz
+  dependencies:
+    apt:
+    - ca-certificates
+    - curl
+    - libgl1-mesa-dev
+    - libice6
+    - libsm6
+    - libx11-6
+    - libxext6
+    - libxi6
+    - libxmu6
+    - libgomp1
+    - libjpeg62
+    - unzip
+    yum:
+    - curl
+    - libICE
+    - libSM
+    - libX11
+    - libXext
+    - libXi
+    - libXmu
+    - libgomp
+    - libjpeg-turbo
+    - mesa-libGL-devel
+    - unzip
+  env:
+    MINC_TOOLKIT: "{{ self.install_path }}"
+    PATH: "$PATH:{{ self.install_path }}/bin:{{ self.install_path }}/pipeline"
+    PERL5LIB: "{{ self.install_path }}/perl:{{ self.install_path }}/pipeline:${PERL5LIB}"
+    LD_LIBRARY_PATH: "{{ self.install_path }}/lib:{{ self.install_path }}/lib/InsightToolkit:${LD_LIBRARY_PATH}"
+    MNI_DATAPATH: "{{ self.install_path }}/share"
+    MINC_FORCE_V2: "1"
+    MINC_COMPRESS: "4"
+    VOLUME_CACHE_THRESHOLD: "-1"
+    MANPATH: "{{ self.install_path }}/man:${MANPATH}"
+  instructions: |
+    {{ self.install_dependencies() }}
+    echo "Downloading MINC, BEASTLIB, and MODELS..."
+    mkdir -p {{ self.install_path }}
+    curl -fL {{ self.urls[self.version] }} \
+    | tar -xz -C {{ self.install_path }} --strip-components 1
+    curl -fL http://packages.bic.mni.mcgill.ca/tgz/beast-library-1.1.tar.gz \
+    | tar -xz -C {{ self.install_path }}/share
+    curl -fL -o /tmp/mni_90a.zip http://www.bic.mni.mcgill.ca/~vfonov/icbm/2009/mni_icbm152_nlin_sym_09a_minc2.zip
+    unzip /tmp/mni_90a.zip -d {{ self.install_path }}/share/icbm152_model_09a
+    curl -fL -o /tmp/mni_90c.zip http://www.bic.mni.mcgill.ca/~vfonov/icbm/2009/mni_icbm152_nlin_sym_09c_minc2.zip
+    unzip /tmp/mni_90c.zip -d {{ self.install_path }}/share/icbm152_model_09c
+    sed -i 's+MINC_TOOLKIT=/opt/minc+MINC_TOOLKIT={{ self.install_path }}+g' {{ self.install_path }}/minc-toolkit-config.sh
+    rm -rf /tmp/mni*
