--- a/neurodocker/templates/mricron.yaml
+++ b/neurodocker/templates/mricron.yaml
@@ -2,27 +2,41 @@
 #
 # Repository: https://github.com/neurolabusc/MRIcron
 
-generic:
-  binaries:
-    urls:
-      latest: https://github.com/neurolabusc/MRIcron/releases/latest/download/MRIcron_linux.zip
-      "1.0.20190902": https://github.com/neurolabusc/MRIcron/releases/download/v1.0.20190902/MRIcron_linux.zip
-      "1.0.20190410": https://github.com/neurolabusc/MRIcron/releases/download/v1.0.20190410/mricron_linux.zip
-      "1.0.20181114": https://github.com/neurolabusc/MRIcron/releases/download/v1.0.20181114/mricron_linux.zip
-      "1.0.20180614": https://github.com/neurolabusc/MRIcron/releases/download/v1.0.20180614/mricron_linux.zip
-      "1.0.20180404": https://github.com/neurolabusc/MRIcron/releases/download/v1.0.20180404/mricron_lx64.zip
-      "1.0.20171220": https://github.com/neurolabusc/MRIcron/releases/download/v1.0.20171220/mricron_linux.zip
-    dependencies:
-      apt: libgtk2.0-0
-      yum: gtk2
-    env:
-      PATH: "{{ mricron.install_path }}:$PATH"
-    instructions: |
-      {{ mricron.install_dependencies() }}
-      echo "Downloading MRIcron ..."
-      mkdir -p {{ mricron.install_path }}
-      curl {{ mricron.curl_opts }} -O {{ mricron.binaries_url }}
-      unzip "*cron*.zip"
-      rm -f "*cron*.zip"
-      mv mricron/* {{ mricron.install_path }}
-      rmdir mricron
+name: mricron
+binaries:
+  arguments:
+    required:
+    - version
+    optional:
+      install_path: /opt/mricron-{{ self.version }}
+  urls:
+    "1.0.20190902": https://github.com/neurolabusc/MRIcron/releases/download/v1.0.20190902/MRIcron_linux.zip
+    "1.0.20190410": https://github.com/neurolabusc/MRIcron/releases/download/v1.0.20190410/mricron_linux.zip
+    "1.0.20181114": https://github.com/neurolabusc/MRIcron/releases/download/v1.0.20181114/mricron_linux.zip
+    "1.0.20180614": https://github.com/neurolabusc/MRIcron/releases/download/v1.0.20180614/mricron_linux.zip
+    "1.0.20180404": https://github.com/neurolabusc/MRIcron/releases/download/v1.0.20180404/mricron_lx64.zip
+    "1.0.20171220": https://github.com/neurolabusc/MRIcron/releases/download/v1.0.20171220/mricron_linux.zip
+  dependencies:
+    apt:
+    - ca-certificates
+    - curl
+    - libatk-adaptor
+    - libcanberra-gtk-module
+    - libgail-common
+    - libgtk2.0-0
+    - unzip
+    yum:
+    - curl
+    - gtk2
+    - unzip
+  env:
+    PATH: "{{ self.install_path }}:$PATH"
+  instructions: |
+    {{ self.install_dependencies() }}
+    echo "Downloading MRIcron ..."
+    mkdir -p {{ self.install_path }}
+    curl -fL -O {{ self.urls[self.version] }}
+    unzip "*cron*.zip"
+    rm -f "*cron*.zip"
+    mv mricron/* {{ self.install_path }}
+    rmdir mricron
