updates to setup config
- add dependencies for reproenv
- add console scripts for reproenv
- update console script for neurodocker-minify
- remove support for python 3.6
- add dependencies for docs (sphinx)
- add options for flake8, mypy, pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = neurodocker
 url = https://github.com/repronim/neurodocker
 author = Neurodocker Developers
 author_email = jakub.kaczmarzyk@gmail.com
-description = Create custom containers for neuroimaging
+description = A generic generator of Dockerfiles and Singularity recipes
 license = Apache License, 2.0
 classifiers =
     Development Status :: 4 - Beta
@@ -14,38 +14,51 @@ classifiers =
     Operating System :: OS Independent
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
     Topic :: Software Development
     Topic :: Software Development :: Libraries :: Python Modules
 
 [options]
 packages = find:
-python_requires = >= 3.5
+python_requires = >= 3.7
 install_requires =
-    etelemetry>=0.2.0
-    jinja2>=2.0
-    PyYAML>=3.0
+    click >= 7.0
+    etelemetry >= 0.2.0
+    jinja2 >= 2.0
+    jsonschema >= 3.0
+    pyyaml  >= 5.0
 
 [options.extras_require]
 dev =
-    docker>=3.0
+    black
+    codecov
+    docker >= 4.4.1
     flake8
+    mypy == 0.790
     pre-commit
-    pytest-cov>=2.0
-    spython>=0.0.36
+    pytest >= 6.0
+    pytest-cov >= 2.0.0
+    pytest-reportlog >= 0.1.2
+    pytest-xdist >= 2.2.0
+docs =
+    sphinx >= 3.4
+    sphinx_rtd_theme >= 0.5.1
+    sphinxcontrib.apidoc >= 0.3
 all =
     %(dev)s
+    %(docs)s
 
 [options.entry_points]
 console_scripts =
-    neurodocker = neurodocker.neurodocker:main
-    neurodocker-minify = neurodocker.reprozip.gentle.trace:main
+    neurodocker = neurodocker.cli.cli:cli
+    neurodocker-minify = neurodocker.reprozip.trace:main
 
 [options.package_data]
 neurodocker =
     templates/*.yaml
+    reproenv/schemas/*.json
     reprozip/gentle/_trace.sh
     reprozip/utils/reprozip_trace_runner.sh
 
@@ -57,9 +70,27 @@ versionfile_build = neurodocker/_version.py
 tag_prefix =
 parentdir_prefix =
 
-[coverage:run]
-branch = True
-
 [flake8]
 max-line-length = 88
-per-file-ignores = __init__.py:F401
+extend-ignore = E203
+exclude = neurodocker/_version.py
+
+[mypy-neurodocker._version]
+ignore_errors = True
+
+[mypy-docker]
+ignore_missing_imports = True
+
+[mypy-jsonschema]
+ignore_missing_imports = True
+
+[tool:pytest]
+addopts = --cov=neurodocker --cov-config=setup.cfg --verbose
+markers =
+    long: mark a test as taking a long time (minutes)
+    verylong: mark a test as taking a very long time (over 10 minutes)
+
+[coverage:run]
+omit =
+    */tests/*
+    neurodocker/_version.py
