add mypy-extensions, typing-extensions + update path to minification shell script

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,9 @@ install_requires =
     etelemetry >= 0.2.0
     jinja2 >= 2.0
     jsonschema >= 3.0
+    mypy-extensions
     pyyaml  >= 5.0
+    typing-extensions
 
 [options.extras_require]
 dev =
@@ -59,8 +61,7 @@ console_scripts =
 neurodocker =
     templates/*.yaml
     reproenv/schemas/*.json
-    reprozip/gentle/_trace.sh
-    reprozip/utils/reprozip_trace_runner.sh
+    reprozip/_trace.sh
 
 [versioneer]
 VCS = git
