add `minify` extras to install + add `neurodocker minify` only if docker-py installed

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,10 +33,12 @@ install_requires =
     typing-extensions
 
 [options.extras_require]
+minify =
+    docker >= 4.4.1
 dev =
+    %(minify)s
     black
     codecov
-    docker >= 4.4.1
     flake8
     mypy == 0.790
     pre-commit
@@ -49,6 +51,7 @@ docs =
     sphinx_rtd_theme >= 0.5.1
     sphinxcontrib.apidoc >= 0.3
 all =
+    %(minify)s
     %(dev)s
     %(docs)s
 
