install pydata sphinx theme + add pytest markers for docker/singularity builders

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,7 +48,7 @@ dev =
     pytest-xdist >= 2.2.0
 docs =
     sphinx >= 3.4
-    sphinx_rtd_theme >= 0.5.1
+    pydata-sphinx-theme
     sphinxcontrib.apidoc >= 0.3
 all =
     %(minify)s
@@ -88,8 +88,10 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [tool:pytest]
-addopts = --cov=neurodocker --cov-config=setup.cfg --verbose
+addopts = --cov=neurodocker --cov-config=setup.cfg --verbose --strict-markers
 markers =
+    builds_docker: builds a docker image
+    builds_singularity: builds a singularity image
     long: mark a test as taking a long time (minutes)
     verylong: mark a test as taking a very long time (over 10 minutes)
 
