--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ instance/
 docs/_build/
 # Generated on each build
 docs/api
+docs/test-all-templates/build_results.json
 
 # PyBuilder
 .pybuilder/
